delete space between link title and link

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ summary {
 <div id="linx" class="section level2">
 <h2>linx</h2>
 <ul>
-<li>[day 1 test] (day1-test-2.html)</li>
+<li><a href="day1-test-2.html">day 1 test</a></li>
 </ul>
 </div>
 
