--- a/index.html
+++ b/index.html
@@ -377,6 +377,9 @@ summary {
 
 <div id="linx" class="section level2">
 <h2>linx</h2>
+</div>
+<div id="data-vis" class="section level1">
+<h1><a href="ggplot-and-leaflet.html">DATA VIS!!!!</a></h1>
 <ul>
 <li><a href="day1-test-2.html">day 1 test</a></li>
 </ul>
